added gestures and device rotation tests